namespace Workbench.Modules.Users.Dtos;

public record UserDto(string UserName);