Table User {
  Id int [pk, increment]
  Email varchar(256)
  UserName varchar(256)
  PasswordHash varchar
}

Table Project {
  Id int [pk, increment]
  Name varchar(100)
  Description varchar(500)
  CreatedAt datetime

  OwnerId int [ref: > User.Id]
}

Table ProjectMembership {
  ProjectId int [ref: > Project.Id]
  UserId int [ref: > User.Id]
  Role varchar // 'Lead' | 'Member'

  indexes {
    (ProjectId, UserId) [pk]
  }
}

Table ProjectInvite {
  Code varchar(64) [pk]
  CreatedAt datetime
  ExpiresAt datetime

  ProjectId int [ref: > Project.Id]
  CreatedById int [ref: > User.Id]

  indexes {
    ProjectId [note: 'active invites by project']
    CreatedById
  }
}

Table Board {
  Id int [pk, increment]
  Name varchar(255)

  ProjectId int [ref: > Project.Id, unique]
}

Table BoardColumn {
  Id int [pk, increment]
  Name varchar(255)
  Description varchar(512)
  Position int
  Color varchar // enum Color

  BoardId int [ref: > Board.Id]

  indexes {
    (BoardId, Position) [unique]
  }
}

Table BoardCard {
  Id int [pk, increment]
  Position int
  BoardId int [ref: > Board.Id]
  ColumnId int [ref: > BoardColumn.Id]
  IssueId int [ref: > Issue.Id]

  indexes {
    (ColumnId, Position) [unique]
    (BoardId, IssueId) [unique]
  }
}

Table Issue {
  Id int [pk, increment]
  Title varchar(120)
  Description varchar(2000)
  Status varchar // 'Open' | 'InProgress' | 'Closed'
  CreatedAt datetime

  ProjectId int [ref: > Project.Id]
  AuthorId int [ref: > User.Id]
  AssignedToId int [ref: > User.Id, note: 'nullable']

  indexes {
    AssignedToId
  }
}

Table IssueStatusChange {
  Id int [pk, increment]
  FromStatus varchar
  ToStatus varchar
  ChangedAt datetime

  IssueId int [ref: > Issue.Id]
  ChangedByUserId int [ref: > User.Id]

  indexes {
    IssueId
  }
}

Table Comment {
  Id int [pk, increment]
  Content varchar(2000)
  CreatedAt datetime

  AuthorId int [ref: > User.Id]
  IssueId int [ref: > Issue.Id]
}

Table Attachment {
  Id UUID [pk]
  ContentType varchar(128)
  OriginalFileName varchar(255)
  CreatedAt datetime

  UploaderId int [ref: > User.Id]
}

Table IssueAttachment {
  IssueId int [ref: > Issue.Id]
  AttachmentId UUID [ref: > Attachment.Id, unique]

  indexes {
    (IssueId, AttachmentId) [pk]
  }
}

Table CommentAttachment {
  CommentId int [ref: > Comment.Id]
  AttachmentId UUID [ref: > Attachment.Id, unique]

  indexes {
    (CommentId, AttachmentId) [pk]
  }
}

Table Tag {
  Id int [pk, increment]
  Name varchar(50)
  Description varchar(2000)
  Color varchar // enum Color

  ProjectId int [ref: > Project.Id]

  indexes {
    (ProjectId, Name) [unique]
  }
}

Table IssueTag {
  IssueId int [ref: > Issue.Id]
  TagId int [ref: > Tag.Id]

  indexes {
    (IssueId, TagId) [pk]
  }
}

Table Vote {
  IssueId int [ref: > Issue.Id]
  VoterId int [ref: > User.Id]
  Value int // 1 (Upvote) or -1 (Downvote)
  CreatedAt datetime

  indexes {
    (IssueId, VoterId) [pk]
  }
}

Table Milestone {
  Id int [pk, increment]
  Name varchar(255)
  Description varchar(1000)
  DueDate datetime [note: 'nullable']

  ProjectId int [ref: > Project.Id]
}

Table MilestoneItem {
  MilestoneId int [ref: > Milestone.Id]
  IssueId int [ref: > Issue.Id]

  indexes {
    (MilestoneId, IssueId) [pk]
  }
}
